# h5_to_ply

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/h5_to_ply/: main.py
